--- a/book.toml
+++ b/book.toml
@@ -4,3 +4,15 @@ language = "en"
 multilingual = false
 src = "src"
 title = "Why Rust ?"
+
+[preprocessor]
+
+[preprocessor.catppuccin]
+assets_version = "2.1.0" # DO NOT EDIT: Managed by `mdbook-catppuccin install`
+
+[output]
+
+[output.html]
+default-theme = "latte"
+preferred-dark-theme = "mocha"
+additional-css = ["./theme/catppuccin.css"]
