--- a/book.toml
+++ b/book.toml
@@ -16,3 +16,4 @@ assets_version = "2.1.0" # DO NOT EDIT: Managed by `mdbook-catppuccin install`
 default-theme = "latte"
 preferred-dark-theme = "mocha"
 additional-css = ["./theme/catppuccin.css"]
+git-repository-url = "https://github.com/lpnh/why-rust"
